# 2dAppleCarvingAlgorithm_pozoyan_r_o

./: .build.bat  CMakeLists.txt  CppProperties.json  README.md
apple_carving/: CMakeLists.txt  apple_carving.cpp  apple_carving.hpp  apple_carving_test.cpp  build.sh  delauney_triangulation.cpp
apple_carving/apple_carving/: CMakeLists.txt  apple_carving.cpp  apple_carving.hpp
apple_carving/test/: test_1(100).txt  test_2(100).txt  test_3(100).txt
bin.rel/: points.csv  visualisation.tex
test/: test_1(500).txt  test_2(500).txt  test_3(500).txt
